Ignore fixtures when calculating coverage

--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/__mocks__/vendor/third_party/*.js",
-      "!src/test/*.js"
+      "!fixtures/**/*.js"
     ],
     "timers": "fake"
   }
